--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,31 @@
-# Compiled class file
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+
 *.class
-
-# Log file
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+.DS_Store
 
 # Package Files #
 *.jar
 *.war
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+#IDE files#
+.idea/
+*.iml
+/.settings
+/.project
+/.classpath
+
+/*_override.properties
+config-override/*
+application-default.properties
+application_override.properties
+
+buildDetails.md
